# Bingo_web3

./: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD_INSTRUCTIONS.md  Cargo.toml  FRONTEND_INTEGRATION_GUIDE.md  PROJECT_SUMMARY.md  README.md  REFACTORING_GUIDE.md  REVENUE_MODEL.md  TECHNICAL_SPEC.md  bingo-landing.html  deploy.sh
bingo-mvp/: QUICKSTART.md  README.md  SPECIFICATION.md  deploy.sh  examples.sh
bingo-mvp/contracts/series/: Cargo.toml
bingo-mvp/contracts/series/src/: admin.rs  lib.rs  storage.rs  types.rs  user_ops.rs  validation.rs  yield_calc.rs
contracts/bingo_vault/: Cargo.toml
contracts/bingo_vault/src/: error.rs  events.rs  lib.rs  pricing.rs  storage.rs
contracts/bt_bill_token/: Cargo.toml
contracts/bt_bill_token/src/: error.rs  events.rs  lib.rs  storage.rs
contracts/repo_market/: Cargo.toml
contracts/repo_market/src/: error.rs  events.rs  lib.rs  storage.rs  validation.rs
scripts/: create_all_scripts.sh  create_series.sh
tests/: integration_test.rs
